Attempt to fix overflow issue on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,6 @@ html {
 }
 
 body {
-    overflow: hidden;
+    overflow: clip;
     background-color: #000022;
 }
