--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,7 @@ html {
 
 body {
     margin: 0;
-    overflow: hidden;
+    overflow: clip;
 }
 
 .page {
